[build-system]
requires = [
   "attrs",
   "aqtinstall",
   # != 0.10.0 for https://github.com/miurahr/py7zr/issues/252
   "py7zr != 0.10.0",
   "importlib-metadata",
   "hyperlink",
   "macholib",
   "pylddwrap",
   "requests",
   "setuptools",
   "versioneer-518 == 0.18",
   "wheel",
]
build-backend = "setuptools.build_meta"
