[metadata]
name = pyqtwrappers
description = PyQt Designer and QML plugins"
version = attr: local_backend.version
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/altendky/pyqt5-tools
author = Kyle Altendorf
author_email = sda@fstab.net
license = GPLv3
classifiers =
    # complete classifier list: https://pypi.org/pypi?%3Aaction=list_classifiers
    Development Status :: 4 - Beta
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications :: Qt
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Topic :: Utilities
install_requires =
    click
    pyqtplugins @ git+https://github.com/altendky/pyqt5-tools@just_plugins
    qttools @ git+https://github.com/altendky/pyqt5-tools@just_applications

[options]
include_package_data = True
python_requires = >=3.5
package_dir=
    =src
packages=find:

[options.entry_points]
console_scripts =
    pyqttoolsinstalluic = pyqtwrappers.entrypoints:pyqttoolsinstalluic
    pyqtdesigner = pyqtwrappers.entrypoints:pyqtdesigner
    pyqtqmlscene = pyqtwrappers.entrypoints:pyqtqmlscene
    pyqtqmltestrunner = pyqtwrappers.entrypoints:pyqtqmltestrunner

[options.packages.find]
where=src

[versioneer]
VCS = git
style = pep440-post
versionfile_source = src/pyqtwrappers/_version.py
versionfile_build = pyqtwrappers/_version.py
tag_prefix = v

